<resources>
    <string name="app_name">NoteKeeper</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="courses">courses</string>
    <string name="note_title">Title</string>
    <string name="note_description">Description</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_blank">blank</string>
    <string name="add_new_note">Add new note</string>
    <string name="action_next">Next</string>
    <string name="title_activity_items">ItemsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="note_list">Note list</string>
    <string name="notes">Notes</string>
    <string name="menu_course">Course</string>
    <string name="course_list">list of courses</string>
    <string name="left_arrow">Left Arrow</string>
    <string name="right_arrow">Right Arrow</string>
    <string name="note_color">Note Color</string>

    <!--
        Colors referenced by res/values/attr.xml and used by the
        custom CustomSelector view
    -->
    <string-array name="note_color_array">
        <item>#E57373</item>
        <item>#BA68C8</item>
        <item>#81C784</item>
        <item>#FFF176</item>
        <item>#D7F44336</item>
        <item>#90A4AE</item>
    </string-array>
</resources>