<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/noteListFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.notekeep.FirstFragment"
        android:label="Edit Note"
        tools:layout="@layout/fragment_first">

        <!-- notePosition sets default to -1 in case the argument isn't set when
        -   the FirstFragment page isn't called
        -->
        <argument
            android:name="notePosition"
            app:argType="integer"
            android:defaultValue="-1" />
    </fragment>
    <fragment
        android:id="@+id/noteListFragment"
        android:name="com.example.notekeep.NoteListFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_note_list" >
        <action
            android:id="@+id/noteListFragmentToFirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.notekeep.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_course"
        android:name="com.example.notekeep.ui.course.CoursesFragment"
        android:label="@string/menu_course"
        tools:layout="@layout/fragment_gallery" />

</navigation>