<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <Spinner
        android:id="@+id/spinner_courses"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/courses"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/note_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/note_title"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/spinner_courses"
        app:layout_constraintStart_toStartOf="@+id/spinner_courses"
        app:layout_constraintTop_toBottomOf="@+id/spinner_courses"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/note_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/note_description"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/note_title"
        app:layout_constraintStart_toStartOf="@+id/note_title"
        app:layout_constraintTop_toBottomOf="@+id/note_title"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/colorSelectorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/note_color"
        app:layout_constraintStart_toStartOf="@+id/note_description"
        app:layout_constraintTop_toBottomOf="@+id/note_description" />

    <com.example.notekeep.custom.views.ColorSelector
        android:id="@+id/colorSelector"
        app:colors="@array/note_color_array"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colorSelectorLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>